# numvisz

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
barchart/: CMakeLists.txt
barchart/shaders/: font.fs  font.vs  rect.fs  rect.vs
barchart/src/: application.cpp  application.hpp  commandlineparser.cpp  commandlineparser.hpp  csvparser.cpp  csvparser.hpp  fontrenderer.cpp  fontrenderer.hpp  gui.cpp  gui.hpp  main.cpp  math.cpp  math.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  timer.cpp  timer.hpp
barchart/src/glad/: gl.h
barchartrace/: CMakeLists.txt
barchartrace/src/: application.cpp  application.hpp  barchart.cpp  barchart.hpp  main.cpp
base/: CMakeLists.txt
base/include/viszbase/: color.hpp  csvparser.hpp  fontrenderer.hpp  gui.hpp  linerenderer.hpp  math.hpp  renderer.hpp  shader.hpp
base/shaders/: font.fs  line.fs  line.gs  line.vs  rect.vs
base/src/: commandlineparser.cpp  csvparser.cpp  fontrenderer.cpp  gui.cpp  linerenderer.cpp  math.cpp  renderer.cpp  shader.cpp  timer.cpp
linechartrace/: CMakeLists.txt
linechartrace/src/: application.cpp  linechart.cpp  linechart.hpp  main.cpp
picker/: CMakeLists.txt  adddialog.cpp  adddialog.h  adddialog.ui  csvhelpdialog.cpp  csvhelpdialog.h  csvhelpdialog.ui  fontpickerdialog.cpp  fontpickerdialog.h  fontpickerdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  visualizationsdao.cpp  visualizationsdao.h  visualizationsmodel.cpp  visualizationsmodel.h
